# CardQL

./: PLAN.md  README.md  TASK.md  pyproject.toml  requirements.txt  run
.github/workflows/: workflow.yml
docs/: CONFIG.md  IMAP_SETUP.md  LLM_QUERY.md  PDF_PARSING.md
docs/sample/: secrets.json
src/cardql/: cli.py  imap.py  llm_query.py  ollama_setup.py  streamlit_app.py
src/cardql/cli/: main.py  pipeline.py
src/cardql/export/: __init__.py  sqlite.py
src/cardql/ingest/: __init__.py
src/cardql/parsers/: schema.py
src/cardql/parsers/banks/: hdfc_v2.py  hsbc_v1.py  icici_v1.py
src/ccsa/: cli.py  config.py  imap.py  llm_query.py  ollama_setup.py  streamlit_app.py
src/ccsa/parsers/banks/: axis_v1.py  hdfc_v1.py  hdfc_v2.py  indusind_v1.py  sbi_v1.py
