[project]
name = "credit-card-statement-analyzer"
version = "0.1.0"
description = "Fetch credit card statements from Gmail, normalize transactions, and export for analysis."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pikepdf>=8.0",
  "pypdf>=5.0",
  "langchain-core>=0.3",
  "langchain-ollama>=0.2",
  "streamlit>=1.35",
]

[project.scripts]
ccsa = "ccsa.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
