[project]
name = "cardql"
version = "0.1.0"
description = "CardQL — chat with your credit card statements. Fetch statements, normalize, export to CSV/SQLite, and query with a local LLM (Streamlit + Ollama)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.6",
  "pikepdf>=8.0",
  "pypdf>=5.0",
  "langchain-core>=0.3",
  "langchain-ollama>=0.2",
  "streamlit>=1.35",
]

[project.scripts]
cardql = "cardql.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel>=0.42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
